Fix inventory layout and horizontal scrolling fade-bars

--- a/src/App/Inventory/Inventory.css
+++ b/src/App/Inventory/Inventory.css
@@ -16,3 +16,17 @@
 .inventory h3 {
   font-size: 20pt;
 }
+
+@media(min-width: 768px) {
+  .inventory {
+    overflow: scroll; 
+    max-height: 100%;
+    height: 100%;
+    width: 90%;
+    border-right: 0.25vw solid black;
+  }
+  
+  .inventory-list {
+    overflow: scroll;
+  }
+}
