--- a/src/App/layout/Scrolling/HorizontalScroll.css
+++ b/src/App/layout/Scrolling/HorizontalScroll.css
@@ -3,6 +3,13 @@
   width: 100%;
 }
 
+@media(min-width: 768px) {
+  .h-scrollable-container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .h-scrollable {
   overflow-x: auto;
   width: 100%;
